Couple of git config settings

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,5 +9,7 @@
 [core]
     editor = vim
     excludesfile = ~/.gitignore
+[pull]
+    rebase = true
 [push]
-    default = current
+    default = simple
